# my_log

./: CMakeLists.txt  README.md  setenv.sh
Proxy/: CMakeLists.txt  MY_Dirent.h  MY_Fcntl.h  MY_Log_Manager.cpp  MY_Log_Manager.h  MY_Log_Proxy_IF.cpp  MY_Log_Proxy_IF.h  MY_Log_Proxy_Impl.cpp  MY_Log_Proxy_Impl.h  MY_Stat.h
ProxyWrapper/: CMakeLists.txt  my_log_proxy_wrapper.cpp  my_log_proxy_wrapper.h
testApp/: CMakeLists.txt  main.cpp
